# lint

./: Makefile  muwine.c
init/: CMakeLists.txt  init.c  init.cpp
kernel/: Makefile  event.c  event.h  file.c  file.h  handle.c  ioctls.h  mutant.c  mutant.h  muwine.c  muwine.h  obj.c  obj.h  proc.c  proc.h  reg.c  reg.h  sec.c  sec.h  sect.c  sect.h  semaphore.c  semaphore.h  thread.c  thread.h  timer.c  timer.h  unixfs.c
lib/: CMakeLists.txt  libmuw.c  muw.h
pam_muw/: CMakeLists.txt
pam_muw/src/: muw.cpp  pam_muw.c  pam_muw.cpp
regtest/: CMakeLists.txt  regtest.c
tests/: CMakeLists.txt  filetest.c  mutanttest.c  proctest.c  regtest.c  sdtest.c  semtest.c  threadtest.c  timertest.c  tokentest.c
